--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slide1.avif" class="d-block mx-auto carousel-img" alt="Slide 1">
+                    <img src="./assets/images/slide3.jpg" class="d-block mx-auto carousel-img" alt="Slide 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h2 class="carousel-heading">We Shape You Stronger, Smarter.</h2>
                         <p class="carousel-text">Your journey starts here — build strength, gain confidence, and feel
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./assets/images/slide2.avif" class="d-block mx-auto carousel-img" alt="Slide 2">
+                    <img src="./assets/images/slide3.jpg" class="d-block mx-auto carousel-img" alt="Slide 2">
                     <div class="carousel-caption d-none d-md-block">
                         <h2 class="carousel-heading">Train With Purpose, Live With Power.</h2>
                         <p class="carousel-text">At FitAura, we blend science, community, and mindset to unlock your
@@ -777,15 +777,15 @@
             style="border-radius: 50px; background-color: #1f2122;">
             <h1 class="fw-bold" style="color: var(--color-primary); font-size: 3rem;">Thank You for Choosing FitAura!
             </h1>
-            <h3 class="mt-3" style="font-size: 2rem;">We’re thrilled to be part of your fitness journey.</h3>
+            <h3 class="mt-3" style="font-size: 2rem;">We're thrilled to be part of your fitness journey.</h3>
             <p class="mt-3" style="font-size: 1.2rem;">Feel free to <a href="#contact"
                     style="color: var(--color-seconsary); text-decoration: underline;">contact us</a> anytime for
                 support, questions, or just to share your progress.</p>
             <p class="mb-0" style="font-size: 1rem;">Together, we grow stronger every day 💪</p>
         </div>
-
-        <form class="form" id="form" name="form" action="#" method="post" onsubmit="return validate()" novalidate>
-            <p class="title">Register </p>
+        <form class="form" id="register-form" name="form" action="#" method="post" onsubmit="return validateRegister()"
+            novalidate>
+            <p class="title">Register</p>
             <p class="message">Signup now and get full access to our app.</p>
 
             <div class="flex">
@@ -820,11 +820,32 @@
                 <span class="error" id="confirm-error"></span>
             </label>
 
-            <input type="submit" class="submit">
+            <input type="submit" class="submit" value="Register">
             <input type="reset" class="reset" value="Reset">
-            <p class="signin">Already have an account? <a href="#">Signin</a></p>
+            <p class="signin">Already have an account? <a href="#" id="show-signin">Sign in</a></p>
         </form>
 
+        <!-- Signin Form (initially hidden) -->
+        <form class="form" id="signin-form" style="display: none;" name="signin-form" action="#" method="post"
+            onsubmit="return validateSignin()" novalidate>
+            <p class="title">Sign In</p>
+            <p class="message">Welcome back! Sign in to continue your fitness journey.</p>
+
+            <label>
+                <input class="input" id="signin-email" type="email" placeholder="" autocomplete="on">
+                <span>Email</span>
+                <span class="error" id="signin-email-error"></span>
+            </label>
+
+            <label>
+                <input class="input" id="signin-password" type="password" placeholder="" autocomplete="on">
+                <span>Password</span>
+                <span class="error" id="signin-password-error"></span>
+            </label>
+
+            <input type="submit" class="submit" value="Sign In">
+            <p class="signin">Don't have an account? <a href="#" id="show-register">Register</a></p>
+        </form>
     </section>
     <footer>
         <div class="container">
