--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <p class="carousel-text">Every drop of sweat, every rep counts — we’re with you every step of
                             the
                             way.</p>
-                        <a href="#contact" class="carousel-btn">Get Started</a>
+                        <a href="#third-section" class="carousel-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -650,7 +650,7 @@
                         <span> No access to special classes </span>
                     </li>
                 </ul>
-                <a href="#" class="action">
+                <a href="#third-section" class="action">
                     Get started
                 </a>
             </div>
@@ -708,7 +708,7 @@
                         <span> Includes access to group classes </span>
                     </li>
                 </ul>
-                <a href="#" class="action">
+                <a href="#third-section" class="action">
                     Get started
                 </a>
             </div>
@@ -766,7 +766,7 @@
                         <span> Bring a friend 2x/month for free </span>
                     </li>
                 </ul>
-                <a href="#" class="action">
+                <a href="#third-section" class="action">
                     Get started
                 </a>
             </div>
@@ -783,39 +783,39 @@
                 support, questions, or just to share your progress.</p>
             <p class="mb-0" style="font-size: 1rem;">Together, we grow stronger every day 💪</p>
         </div>
-        <form class="form" id="register-form" name="form" action="#" method="post" onsubmit="return validateRegister()"
+        <form class="form" id="register-form" name="form" action="addUser.php" method="post" onsubmit="return validateRegister()"
             novalidate>
             <p class="title">Register</p>
             <p class="message">Signup now and get full access to our app.</p>
 
             <div class="flex">
                 <label>
-                    <input class="input" id="first-name" type="text" placeholder="" autocomplete="on">
+                    <input class="input" id="first-name" name="first-name" type="text" placeholder="" autocomplete="on">
                     <span>Firstname</span>
                     <span class="error" id="first-name-error"></span>
                 </label>
 
                 <label>
-                    <input class="input" id="last-name" type="text" placeholder="" autocomplete="on">
+                    <input class="input" name="last-name" id="last-name" type="text" placeholder="" autocomplete="on">
                     <span>Lastname</span>
                     <span class="error" id="last-name-error"></span>
                 </label>
             </div>
 
             <label>
-                <input class="input" id="email" type="email" placeholder="" autocomplete="on">
+                <input class="input" name="email" id="email" type="email" placeholder="" autocomplete="on">
                 <span>Email</span>
                 <span class="error" id="email-error"></span>
             </label>
 
             <label>
-                <input class="input" id="password" type="password" placeholder="" autocomplete="on">
+                <input class="input" name="password" id="password" type="password" placeholder="" autocomplete="on">
                 <span>Password</span>
                 <span class="error" id="password-error"></span>
             </label>
 
             <label>
-                <input class="input" id="confirm" type="password" placeholder="" autocomplete="on">
+                <input class="input" name="confirm" id="confirm" type="password" placeholder="" autocomplete="on">
                 <span>Confirm password</span>
                 <span class="error" id="confirm-error"></span>
             </label>
@@ -868,10 +868,10 @@
                 <div class="tooltip">LinkedIn</div>
             </li>
             <li class="icon-content">
-                <a href="https://www.github.com/" aria-label="GitHub" data-social="github">
+                <a href="https://github.com/Abderrahmen11" aria-label="GitHub" data-social="github" target="_blank" rel="nofollow">
                     <div class="filled"></div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-github" viewBox="0 0 16 16" xml:space="preserve">
+                        class="bi bi-github" viewBox="0 0 16 16" xml:space="preserve">      
                         <path
                             d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"
                             fill="currentColor"></path>
